Fixed the customize button alignment issue

--- a/styles.css
+++ b/styles.css
@@ -741,7 +741,7 @@ div[id^="wdm-"][id*="-individual"] table.table,
     vertical-align: middle;
     right: 1.25rem;
     text-align: center;
-    margin-right: auto;
+    /* margin-right: auto; */
     margin-left: auto;
     margin-bottom: 1.2rem;
     top: 28px;
